--- a/index.html
+++ b/index.html
@@ -15,18 +15,17 @@
     <div id = 'main'>
       <div id = 'info'>
         <div id = 'tableau'>
-          <span class = 'messages'>Current action</span>
-          <span class = 'messages previous'>Previous action</span>
+          <span class = 'messages'></span>
+          <span class = 'messages previous'></span><span class = 'messages previous'></span>
+          <span class = 'messages previous'></span><span class = 'messages previous'></span>
         </div>
         <div id = 'actions'>
-          <div id = 'question'><span>Do you want to buy?</span></div>
-          <button class = 'btn yes'>Yes</button>
-          <button class = 'btn no'>No</button>
+          <div id = 'question'>Do you want to start?</div>
+          <button class = 'btn' id = 'yes'>Yes</button>
         </div>
         <div id = 'list_of_players'>
           <div class = 'player player_title'>
             <span class = 'name'>PLAYER</span>
-            <div class = 'icon'></div>
             <span class = 'balance'>BALANCE</span>
           </div>
         </div>
@@ -35,92 +34,44 @@
 
         <div class = 'row up'>
           <div class = 'corner_up cell'>
-            <div class = 'content rotate_up'>
-              <div class = 'desc'></div>
-              <div class = 'picture'></div>
-              <div class = 'guests'></div>
-            </div>
+            <div class = 'content rotate_up'></div>
           </div>
           <div class = 'horizontal_up cell'>
-            <div class = 'content rotate_up'>
-              <div class = 'desc'></div>
-              <div class = 'picture'></div>
-              <div class = 'guests'></div>
-            </div>
+            <div class = 'content rotate_up'></div>
           </div>
           <div class = 'horizontal_up cell'>
-            <div class = 'content rotate_up'>
-              <div class = 'desc'></div>
-              <div class = 'picture'></div>
-              <div class = 'guests'></div>
-            </div>
+            <div class = 'content rotate_up'></div>
           </div>
           <div class = 'horizontal_up cell'>
-            <div class = 'content rotate_up'>
-              <div class = 'desc'></div>
-              <div class = 'picture'></div>
-              <div class = 'guests'></div>
-            </div>
+            <div class = 'content rotate_up'></div>
           </div>
           <div class = 'horizontal_up cell'>
-            <div class = 'content rotate_up'>
-              <div class = 'desc'></div>
-              <div class = 'picture'></div>
-              <div class = 'guests'></div>
-            </div>
+            <div class = 'content rotate_up'></div>
           </div>
            <div class = 'horizontal_up cell'>
-            <div class = 'content rotate_up'>
-              <div class = 'desc'></div>
-              <div class = 'picture'></div>
-              <div class = 'guests'></div>
-            </div>
+            <div class = 'content rotate_up'></div>
           </div>
           <div class = 'corner_up cell'>
-            <div class = 'content rotate_up'>
-              <div class = 'desc'></div>
-              <div class = 'picture'></div>
-              <div class = 'guests'></div>
-            </div>
+            <div class = 'content rotate_up'></div>
           </div>
         </div>
 
         <div class = 'rightcorner'>
           <div class = 'column right'>
             <div class = 'vertical_right cell'>
-              <div class = 'content rotate_right'>
-                <div class = 'desc'></div>
-                <div class = 'picture'></div>
-                <div class = 'guests'></div>
-              </div>
+              <div class = 'content rotate_right'></div>
             </div>
             <div class = 'vertical_right cell'>
-              <div class = 'content rotate_right'>
-                <div class = 'desc'></div>
-                <div class = 'picture'></div>
-                <div class = 'guests'></div>
-              </div>
+              <div class = 'content rotate_right'></div>
             </div>
             <div class = 'vertical_right cell'>
-              <div class = 'content rotate_right'>
-                <div class = 'desc'></div>
-                <div class = 'picture'></div>
-                <div class = 'guests'></div>
-              </div>
+              <div class = 'content rotate_right'></div>
             </div>
             <div class = 'vertical_right cell'>
-              <div class = 'content rotate_right'>
-                <div class = 'desc'></div>
-                <div class = 'picture'></div>
-                <div class = 'guests'></div>
-              </div>
+              <div class = 'content rotate_right'></div>
             </div>
              <div class = 'vertical_right cell'>
-              <div class = 'content rotate_right'>
-                <div class = 'desc'></div>
-                <div class = 'picture'></div>
-                <div class = 'guests'></div>
-              </div>
+              <div class = 'content rotate_right'></div>
             </div>
           </div>
 
@@ -128,94 +79,45 @@
 
           <div class = 'row down'>
             <div class = 'corner_right_down cell'>
-              <div class = 'content'>
-                <div class = 'desc'></div>
-                <div class = 'picture'></div>
-                <div class = 'guests'></div>
-              </div>
+              <div class = 'content'></div>
             </div>
             <div class = 'horizontal_down cell'>
-              <div class = 'content'>
-                <div class = 'desc'></div>
-                <div class = 'picture'></div>
-                <div class = 'guests'></div>
-              </div>
+              <div class = 'content'></div>
             </div>
             <div class = 'horizontal_down cell'>
-              <div class = 'content'>
-                <div class = 'desc'></div>
-                <div class = 'picture'></div>
-                <div class = 'guests'></div>
-              </div>
+              <div class = 'content'></div>
             </div>
             <div class = 'horizontal_down cell'>
-              <div class = 'content'>
-                <div class = 'desc'></div>
-                <div class = 'picture'></div>
-                <div class = 'guests'></div>
-              </div>
+              <div class = 'content'></div>
             </div>
             <div class = 'horizontal_down cell'>
-              <div class = 'content'>
-                <div class = 'desc'></div>
-                <div class = 'picture'></div>
-                <div class = 'guests'></div>
-              </div>
+              <div class = 'content'></div>
             </div>
              <div class = 'horizontal_down cell'>
-              <div class = 'content'>
-                <div class = 'desc'></div>
-                <div class = 'picture'></div>
-                <div class = 'guests'></div>
-              </div>
+              <div class = 'content'></div>
             </div>
           </div>
         </div>
 
         <div class = 'column left'>
           <div class = 'corner_left_down cell'>
-            <div class = 'content'>
-              <div class = 'desc'></div>
-              <div class = 'picture'></div>
-              <div class = 'guests'></div>
-            </div>
+            <div class = 'content'></div>
           </div>
           <div class = 'vertical_left cell'>
-            <div class = 'content rotate_left'>
-              <div class = 'desc'></div>
-              <div class = 'picture'></div>
-              <div class = 'guests'></div>
-            </div>
+            <div class = 'content rotate_left'></div>
           </div>
           <div class = 'vertical_left cell'>
-            <div class = 'content rotate_left'>
-              <div class = 'desc'></div>
-              <div class = 'picture'></div>
-              <div class = 'guests'></div>
-            </div>
+            <div class = 'content rotate_left'></div>
           </div>
           <div class = 'vertical_left cell'>
-            <div class = 'content rotate_left'>
-              <div class = 'desc'></div>
-              <div class = 'picture'></div>
-              <div class = 'guests'></div>
-            </div>
+            <div class = 'content rotate_left'></div>
           </div>
           <div class = 'vertical_left cell'>
-            <div class = 'content rotate_left'>
-              <div class = 'desc'></div>
-              <div class = 'picture'></div>
-              <div class = 'guests'></div>
-            </div>
+            <div class = 'content rotate_left'></div>
           </div>
            <div class = 'vertical_left cell'>
-            <div class = 'content rotate_left'>
-              <div class = 'desc'></div>
-              <div class = 'picture'></div>
-              <div class = 'guests'></div>
-            </div>
+            <div class = 'content rotate_left'></div>
           </div>
-
         </div>
       </div>
     </div>
